  Sachsenheim).
- New: '*of'-rules can be extended by concatenating another rule (Frank
  Sachsenheim).
- New: Allows various error output with error handlers (Frank Sachsenheim).
- New: Available rules etc. of a Validator-instance are accessible as
  'validation_rules', 'normalization_rules', 'types', 'validators' and 'coercer'
  -property (Frank Sachsenheim).
- New: 'Validator.root_schema' complements 'Validator.root_document' (Frank
  Sachsenheim).
- New: 'Validator.document_path' and 'Validator.schema_path' properties can
  be used to determine the relation of the currently validating document to the
  'root_document' / 'root_schema' (Frank Sachsenheim).
- New: Known, validated definition schemas are cached, thus validation run-time
  of schemas is reduced (Frank Sachsenheim).
- New: Add testing with Docker (Frank Sachsenheim).

- Change: The processed root-document of is now available as 'root_document'-
  property of the (child-)Validator (Frank Sachsenheim).
- Change: Removed 'context'-argument from 'validate'-method as this is set
  upon the creation of a child-validator (Frank Sachsenheim).
- Change: 'ValidationError'-exception renamed to 'DocumentError' (Frank Sachsenheim).
- Change: Consolidated all schema-related error-messages' names (Frank Sachsenheim).
- Change: Use warnings.warn for deprecation-warnings if available (Frank Sachsenheim).

- Fix: in 0.9.2, coerce does not maintain proper nesting on dict fields. Closes
  #185.
- Fix: normalization not working for valueschema and propertyschema. Closes
  #155 (Frank Sachsenheim).
- Fix: 'coerce' on List elements produces unexpected results Closes #161 (Frank
  Sachsenheim).
- Fix: 'coerce'-constraints are validated (Frank Sachsenheim).
- Fix: Unknown fields are normalized (Frank Sachsenheim).
- Fix: Dependency on boolean field now works as expected. Addresses #138 (Roman
  Redkovich)
- Fix: Add missing deprecation-warnings (Frank Sachsenheim).
